--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "phiranno-designs-gatsby-starter",
   "private": true,
-  "description": "Website for Cowarra Park Preschool",
+  "description": "Starter for Gatsby Websites",
   "version": "0.1.0",
   "author": "Luke Bennett <l.bennett@phirannodesigns.com.au>",
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "build:serve": "npm run build && npm run serve",
     "clean": "gatsby clean",
     "develop": "gatsby develop --host=0.0.0.0",
@@ -26,25 +26,25 @@
     "@headlessui/react": "^0.3.1",
     "@reach/router": "^1.3.4",
     "@sanity/block-content-to-react": "^2.0.7",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "gatsby": "^3.1.0",
-    "gatsby-plugin-image": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "gatsby": "^3.1.2",
+    "gatsby-plugin-image": "^1.1.2",
     "gatsby-source-sanity": "^7.0.0",
     "intersection-observer": "^0.12.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.4",
+    "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
-    "@types/node": "^14.14.35",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
     "eslint-config-adjunct": "^4.11.0",
@@ -68,21 +68,21 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sonarjs": "^0.6.0",
     "eslint-plugin-switch-case": "^1.1.2",
-    "eslint-plugin-unicorn": "^28.0.2",
+    "eslint-plugin-unicorn": "^29.0.0",
     "gatsby-plugin-google-gtag": "^3.1.0",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-postcss": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-sharp": "^3.1.0",
+    "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-plugin-sitemap": "^3.1.0",
     "gatsby-plugin-typescript": "^3.1.0",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
-    "husky": "^5.1.3",
+    "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.3",
+    "tailwindcss": "^2.0.4",
     "tailwindcss-filters": "^3.0.0"
   },
   "prettier": {
