--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phiranno-designs-gatsby-starter",
+  "name": "gatsby-starter-phiranno-designs",
   "private": true,
-  "description": "Starter for Gatsby Websites",
+  "description": "Gatsby Starter for Phiranno Designs Websites",
   "version": "0.1.0",
   "author": "Luke Bennett <l.bennett@phirannodesigns.com.au>",
   "license": "0BSD",
@@ -11,7 +11,7 @@
     "clean": "gatsby clean",
     "develop": "gatsby develop --host=0.0.0.0",
     "dev": "npm run develop",
-    "format": "prettier \"**/*.{md,mdx,json,yaml,js,jsx}\" --write",
+    "format": "prettier . --write --ignore-unknown",
     "eslint:fix": "npm run eslint -- --fix",
     "eslint": "eslint --color --ext .js,.json,.jsx,.ts,.tsx src",
     "serve": "gatsby serve",
@@ -23,68 +23,67 @@
     }
   },
   "dependencies": {
-    "@headlessui/react": "^0.3.1",
+    "@headlessui/react": "^0.3.2",
     "@reach/router": "^1.3.4",
     "@sanity/block-content-to-react": "^2.0.7",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "gatsby": "^3.1.2",
-    "gatsby-plugin-image": "^1.1.2",
-    "gatsby-source-sanity": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "gatsby": "^3.2.1",
+    "gatsby-plugin-image": "^1.2.1",
+    "gatsby-source-sanity": "^7.0.2",
     "intersection-observer": "^0.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.5",
+    "react-hook-form": "^7.0.5",
     "react-icons": "^4.2.0",
-    "react-intersection-observer": "^8.31.0",
-    "typescript": "^4.2.3"
+    "react-intersection-observer": "^8.31.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
-    "@tailwindcss/jit": "^0.1.17",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
-    "eslint-config-adjunct": "^4.11.0",
+    "eslint-config-adjunct": "^4.11.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-auto": "^0.7.0",
+    "eslint-config-auto": "^0.7.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-json": "^2.1.2",
-    "eslint-plugin-markdown": "^2.0.0",
+    "eslint-plugin-markdown": "^2.0.1",
     "eslint-plugin-no-constructor-bind": "^2.0.4",
     "eslint-plugin-no-secrets": "^0.8.9",
     "eslint-plugin-no-unsanitized": "^3.1.4",
     "eslint-plugin-no-use-extend-native": "^0.5.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-scanjs-rules": "^0.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sonarjs": "^0.6.0",
     "eslint-plugin-switch-case": "^1.1.2",
     "eslint-plugin-unicorn": "^29.0.0",
-    "gatsby-plugin-google-gtag": "^3.1.0",
-    "gatsby-plugin-manifest": "^3.1.0",
-    "gatsby-plugin-postcss": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-sharp": "^3.1.2",
-    "gatsby-plugin-sitemap": "^3.1.0",
-    "gatsby-plugin-typescript": "^3.1.0",
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-transformer-sharp": "^3.1.0",
+    "gatsby-plugin-google-gtag": "^3.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-postcss": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-sitemap": "^3.2.0",
+    "gatsby-plugin-typescript": "^3.2.0",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "postcss": "^8.2.8",
+    "postcss": "^8.2.10",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.4",
-    "tailwindcss-filters": "^3.0.0"
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.2.4"
   },
   "prettier": {
     "endOfLine": "lf",
