--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^0.3.2",
+    "@heroicons/react": "^1.0.0",
     "@reach/router": "^1.3.4",
     "@sanity/block-content-to-react": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
